# Starstruck

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/connectors/: __init__.py  base.py  books.py  github.py  instagram.py  letterboxd.py  places.py  spotify.py
backend/app/graph/: builder.py  edges.py
backend/app/graph/nodes/: __init__.py  analyze.py  coach.py  crossref.py  ingest.py  venue.py
backend/app/models/: __init__.py  schemas.py  state.py
backend/app/services/: __init__.py  llm.py
backend/tests/: test_analyze.py
context/: cupidgraph_architecture.jsx
frontend/: index.html
frontend/src/: App.jsx
