[tool.poetry]
name = "cupidgraph-backend"
version = "0.1.0"
description = "AI Coach backend for CupidGraph"
authors = ["Aditya Maheshwari"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
langgraph = "^0.0.10"
langchain-anthropic = "^0.1.1"
pydantic = "^2.6.0"
python-dotenv = "^1.0.1"
feedparser = "^6.0.12"
httpx = "^0.28.1"
beautifulsoup4 = "^4.14.3"
playwright = "^1.58.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
